syntax = "proto3";

//import "google/protobuf/timestamp.proto";
import "profile.proto";

package com.lodny.rwcommon.grpc;

option java_multiple_files = true;
option java_package = "com.lodny.rwcommon.grpc.follow";

service Follow {
  rpc isFollowing (GrpcIsFollowingRequest) returns (GrpcIsFollowingResponse);
  rpc follow (GrpcFollowRequest) returns (GrpcProfileResponse);
  rpc unfollow (GrpcFollowRequest) returns (GrpcProfileResponse);
}


message GrpcIsFollowingRequest {
  uint64 followeeId = 1;
  uint64 followerId = 2;
}

message GrpcIsFollowingResponse {
  bool following = 1;
}


message GrpcFollowRequest {
  uint64 followeeId = 1;
  uint64 followerId = 2;
}
